# grasp_icp

./: .gitignore  CMakeLists.txt  README.md  package.xml
Docker/: Dockerfile  build.bash  demo.bash  entrypoint.sh  readme.md
Docker_no_mirrors/: Dockerfile  build.bash  demo.bash
Docker_no_mirrors2/: Dockerfile  demo.bash  entrypoint.sh
config/: matrix.txt  model_list.yaml
launch/: UR_robot_sim.launch  auto_sim.launch  manual.launch  manual_sim.launch
pcd/: L_pipe_u.stl  T_pipe.stl  coord.STL  gripper.stl  pipe_u.stl  t_pipe_down.stl  t_pipe_u.stl  t_pipe_up.stl
src/: auto_talker.cpp  listener.cpp  talker.cpp  talker_python.py
src/Halcon/: install.bash
src/main/: PoseTransformation.py  cropping_method.py  grasp.py  grasp_design.py  halcon_registration.py  main_process.py  main_process_real.py  obtain_pcd.py  ur_control.py
